[gd_scene load_steps=24 format=3 uid="uid://d0j7s23vmgp0i"]

[ext_resource type="Texture2D" uid="uid://d33a6ixc7jbfi" path="res://assets/sprites/Poring/Poring_0000.png" id="1_2i05y"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_rgl0e"]
[ext_resource type="Texture2D" uid="uid://dvva00o4x4xa0" path="res://assets/sprites/Poring/Poring_0025.png" id="2_eg08x"]
[ext_resource type="Texture2D" uid="uid://dax012h4bde1m" path="res://assets/sprites/Poring/Poring_0001.png" id="2_xn25a"]
[ext_resource type="Texture2D" uid="uid://dxipxkcsmkd6n" path="res://assets/sprites/Poring/Poring_0002.png" id="3_4ilm7"]
[ext_resource type="Texture2D" uid="uid://bp1vx4330fpoa" path="res://assets/sprites/Poring/Poring_0026.png" id="3_mvcoi"]
[ext_resource type="Texture2D" uid="uid://b2wye5wnc3dmh" path="res://assets/sprites/Poring/Poring_0027.png" id="4_2c5oa"]
[ext_resource type="Texture2D" uid="uid://dfqcfsq03k76h" path="res://assets/sprites/Poring/Poring_0003.png" id="4_vkts0"]
[ext_resource type="Texture2D" uid="uid://c40quuwo0x8wl" path="res://assets/sprites/Poring/Poring_0028.png" id="5_twfkq"]
[ext_resource type="Texture2D" uid="uid://nghxfduekpr7" path="res://assets/sprites/Poring/Poring_0008.png" id="6_lhyud"]
[ext_resource type="Texture2D" uid="uid://h4jw57ey785c" path="res://assets/sprites/Poring/Poring_0009.png" id="7_s2yb7"]
[ext_resource type="Texture2D" uid="uid://djxur5kukyjin" path="res://assets/sprites/Poring/Poring_0010.png" id="8_2om40"]
[ext_resource type="Texture2D" uid="uid://dl76rprrr1ku3" path="res://assets/sprites/Poring/Poring_0011.png" id="9_l206u"]
[ext_resource type="Texture2D" uid="uid://buny8tpl1hjdc" path="res://assets/sprites/Poring/Poring_0012.png" id="10_0mv7u"]
[ext_resource type="Texture2D" uid="uid://dc5mtljgx80xp" path="res://assets/sprites/Poring/Poring_0013.png" id="11_ovwii"]
[ext_resource type="Texture2D" uid="uid://s3iq784akh7e" path="res://assets/sprites/Poring/Poring_0015.png" id="13_g25rp"]
[ext_resource type="PackedScene" uid="uid://ooeko6fn5w4p" path="res://scenes/hurtbox.tscn" id="13_hntww"]
[ext_resource type="PackedScene" uid="uid://c4lvx1u2gmohq" path="res://scenes/hitbox.tscn" id="14_vj8ys"]
[ext_resource type="AudioStream" uid="uid://curyaor68bm23" path="res://assets/sounds/hit_sound.wav" id="19_wc7us"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7302t"]
radius = 15.0

[sub_resource type="SpriteFrames" id="SpriteFrames_dj4jy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_eg08x")
}, {
"duration": 1.0,
"texture": ExtResource("3_mvcoi")
}, {
"duration": 1.0,
"texture": ExtResource("4_2c5oa")
}, {
"duration": 1.0,
"texture": ExtResource("5_twfkq")
}, {
"duration": 1.0,
"texture": ExtResource("5_twfkq")
}, {
"duration": 1.0,
"texture": ExtResource("5_twfkq")
}, {
"duration": 1.0,
"texture": ExtResource("5_twfkq")
}, {
"duration": 1.0,
"texture": ExtResource("5_twfkq")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_2i05y")
}, {
"duration": 1.0,
"texture": ExtResource("2_xn25a")
}, {
"duration": 1.0,
"texture": ExtResource("3_4ilm7")
}, {
"duration": 1.0,
"texture": ExtResource("4_vkts0")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_lhyud")
}, {
"duration": 1.0,
"texture": ExtResource("7_s2yb7")
}, {
"duration": 1.0,
"texture": ExtResource("8_2om40")
}, {
"duration": 1.0,
"texture": ExtResource("9_l206u")
}, {
"duration": 1.0,
"texture": ExtResource("10_0mv7u")
}, {
"duration": 1.0,
"texture": ExtResource("11_ovwii")
}, {
"duration": 1.0,
"texture": ExtResource("13_g25rp")
}],
"loop": true,
"name": &"sides",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0wpld"]
radius = 20.025

[sub_resource type="CircleShape2D" id="CircleShape2D_6jc5l"]
radius = 15.0

[node name="Poring" type="CharacterBody2D"]
z_index = 1
position = Vector2(58, -17)
collision_layer = 5
collision_mask = 5
motion_mode = 1
safe_margin = 10.0
script = ExtResource("1_rgl0e")
speed = 85.0
hp = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7302t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-14, 10)
sprite_frames = SubResource("SpriteFrames_dj4jy")
animation = &"death"
autoplay = "idle"
offset = Vector2(14, -10)

[node name="Hurtbox" parent="." instance=ExtResource("13_hntww")]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CircleShape2D_0wpld")

[node name="Hitbox" parent="." instance=ExtResource("14_vj8ys")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_6jc5l")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="hit_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_wc7us")
pitch_scale = 4.0
max_polyphony = 10
bus = &"SFX"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
